fix all layout issues

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -16,6 +16,9 @@
     .contact-gp img{
         display: none;
     }
+    .review-slider{
+        margin-top: 35px;
+    }
 }
 
 
